<resources>
    <string name="app_name">Unit Converter</string>
    <string name="enter_value">Enter Value:</string>
    <string name="input_value">Input Value</string>
    <string name="select_unit">Select Unit:</string>
    <string name="to">To</string>
    <string name="_0_00">0.00</string>
    <string name="mm">mm</string>
    <string name="cm">cm</string>
    <string name="m">m</string>
    <string name="km">km</string>
    <string name="result">Converting %s to %s is %s%s</string>
</resources>